--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li><a href="#">Rules</a></li>
                 <li><a href="#">Gallery</a></li>
                 <li><a href="#">Prices</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="./pages/login form/index.html">Login</a></li>
             </ul>
         </nav>
     </header>
